--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.2
+  provider: ^6.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
